--- a/front-end/fotos.html
+++ b/front-end/fotos.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt" lang="pt">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-        <title>Beach Summer - Movimente suas férias</title>
+        <title>Beach Summer - Movimente suas fÃ©rias</title>
         <link href="css/estilos.css" rel="stylesheet" type="text/css" media="screen" />
         <!--[if IE]>
             <link href="css/estilos-ie.css" rel="stylesheet" type="text/css" media="screen" />
@@ -13,8 +13,8 @@
         <div id="Site">
             <!-- CABECALHO -->
             <div id="Cabecalho">
-                <h1><a href="index.html" title="Ir para a página inicial">Beach Summer</a></h1>
-                <p>Movimente suas férias.</p>
+                <h1><a href="index.html" title="Ir para a pÃ¡gina inicial">Beach Summer</a></h1>
+                <p>Movimente suas fÃ©rias.</p>
             </div>
             <!-- FIM DE CABECALHO -->
             <hr/>
@@ -22,9 +22,9 @@
             <div id="Atalhos">
                 <h2>Atalhos</h2>
                 <ul>
-                    <li><a href="#Conteudo" title="Vá diretamente para o Conteúdo">Conteúdo</a></li>
-                    <li><a href="#Menu" title="Vá diretamente para o Menu">Menu</a></li>
-                    <li><a href="#Rodape" title="Vá diretamente para o Rodapé">Rodapé</a></li>
+                    <li><a href="#Conteudo" title="VÃ¡ diretamente para o ConteÃºdo">ConteÃºdo</a></li>
+                    <li><a href="#Menu" title="VÃ¡ diretamente para o Menu">Menu</a></li>
+                    <li><a href="#Rodape" title="VÃ¡ diretamente para o RodapÃ©">RodapÃ©</a></li>
                 </ul>
             </div>
             <!-- FIM DE ATALHOS  -->
@@ -32,9 +32,9 @@
             <!-- CONTEUDO -->
             <div id="Conteudo">
                 <h2>Beach Summer</h2>
-                <p>Em sua 5ª edição o Beach Summer, realizado no complexo do maior parque aquático da América Latina, o Beach Park, proporciona a adultos, crianças e adolescentes dois finais de semana de muita diversão. Ambientado à beira-mar, no bosque dos coqueirais, o evento traz uma variada junção de clínicas esportivas.</p>
+                <p>Em sua 5Âª ediÃ§Ã£o o Beach Summer, realizado no complexo do maior parque aquÃ¡tico da AmÃ©rica Latina, o Beach Park, proporciona a adultos, crianÃ§as e adolescentes dois finais de semana de muita diversÃ£o. Ambientado Ã  beira-mar, no bosque dos coqueirais, o evento traz uma variada junÃ§Ã£o de clÃ­nicas esportivas.</p>
 				<p><a href="fotos/DSC08296.jpg"><img src="fotos/mini/DSC08296.jpg" alt="foto" /></a> <a href="fotos/DSC08296.jpg"><img src="fotos/mini/DSC08296.jpg" alt="foto" /></a> <a href="fotos/DSC08296.jpg"><img src="fotos/mini/DSC08296.jpg" alt="foto" /></a> <a href="fotos/DSC08296.jpg"><img src="fotos/mini/DSC08296.jpg" alt="foto" /></a> <a href="fotos/DSC08296.jpg"><img src="fotos/mini/DSC08296.jpg" alt="foto" /></a> <a href="fotos/DSC08296.jpg"><img src="fotos/mini/DSC08296.jpg" alt="foto" /></a> <a href="fotos/DSC08296.jpg"><img src="fotos/mini/DSC08296.jpg" alt="foto" /></a> <a href="fotos/DSC08296.jpg"><img src="fotos/mini/DSC08296.jpg" alt="foto" /></a> </p>
-				<p class="navegacao"><a href="#" class="anterior">Anterior</a> / <a href="#" class="proxima">Próxima</a></p>
+				<p class="navegacao"><a href="#" class="anterior">Anterior</a> / <a href="#" class="proxima">PrÃ³xima</a></p>
             </div>
             <!-- FIM DE CONTEUDO -->
             <hr/>
@@ -42,8 +42,8 @@
             <div id="Menu">
                 <h2>Menu</h2>
                 <ul>
-                    <li class="home"><a href="index.html" title="Página inicial">O Evento</a></li>
-                    <li class="programacao"><a href="programacao.html" title="Confira a nossa programação">Programação</a></li>
+                    <li class="home"><a href="index.html" title="PÃ¡gina inicial">O Evento</a></li>
+                    <li class="programacao"><a href="programacao.html" title="Confira a nossa programaÃ§Ã£o">ProgramaÃ§Ã£o</a></li>
                     <li class="fotos ativo"><a href="fotos.html" title="Confira fotos do evento">Fotos</a></li>
                     <li class="estrutura"><a href="estrutura.html" title="Confira a estrutura">Estrutura</a></li>
                     <li class="contato"><a href="contato.html" title="Fale conosco">Fale conosco</a></li>
@@ -60,9 +60,9 @@
                             Sistema Verdes Mares
                         </div>
                         <div class="street-address">
-                            Praça da Imprensa S/N
+                            PraÃ§a da Imprensa S/N
                         </div>
-                        <span class="locality">Fortaleza</span>, <span class="region">Ceará</span>, <span class="postal-code">600000</span>
+                        <span class="locality">Fortaleza</span>, <span class="region">CearÃ¡</span>, <span class="postal-code">600000</span>
                         <span class="country-name">Brasil</span>
                     </div>
                 </div>
